@@ -306,6 +306,7 @@ advanced_configuration.html
 options_page_spelling.html
 options_page_clean.html
 placeholdersets.html
+placeholdersingle.html
 
 [INFOTYPES]
 
