@@ -48,12 +48,13 @@
 
    <dd>It is allowed to use Wildcards (<b>*</b> and <b>?</b>) as known
    from the Windows command line. Additionally, it is allowed to use
-   <a href="placeholders.html">placeholders for single files</a> and
+   <a href="placeholdersingle.html">placeholders for single files</a> and
    <a href="placeholdersets.html">placeholders for sets of files</a> here.
    The combination of wildcards together with
-   <a href="placeholders.html">placeholders for single files</a> is supported.
+   <a href="placeholdersingle.html">placeholders for single files</a> is supported.
    However, any other combination is not allowed.
-   Use the button to the right of this edit box to insert a placeholder
+   Use the button to the right of this edit box to insert a
+   <a href="placeholders.html">placeholder</a>
    or type it manually.</dd>
 
    <dt>'<var>Action</var>'</dt>
