@@ -1,0 +1,213 @@
+<html>
+<head>
+<title>Placeholders for single files</title>
+<link rel="stylesheet" href="STYLE.CSS" type="text/css">
+</head>
+<body>
+
+<h2>Placeholders for single files</h2>
+
+<p>Placeholders referring to single files are used in most cases, where it comes to define the arguments for command line tools (like LaTeX) and DDE-commands.</p>
+
+
+<h3>Naming Conventions for Placeholders</h3>
+
+<p>All placeholders for single files are beginning with a percent signt ('<var>%</var>') followed by up to three characters. The last character specifies which files to reference:</p>
+
+<dl>
+   <dt>m</dt>
+   <dd>The current project's main file.</dd>
+
+   <dt>c</dt>
+   <dd>The current file - The file opened in the editor that has the input focus.</dd>
+</dl>
+
+<p>The character before the last character describes how to reference the specified file:</p>
+
+<dl>
+   <dt>p</dt>
+   <dd>The file's fully qualified path.</dd>
+
+   <dt>d</dt>
+   <dd>The file's directory.</dd>
+
+   <dt>n</dt>
+   <dd>The file's name (name and extension).</dd>
+
+   <dt>t</dt>
+   <dd>The file's title (name without extension).</dd>
+
+   <dt>e</dt>
+   <dd>The file's extension.</dd>
+
+   <dt>b</dt>
+   <dd>The file's base (fully qualified path without the file extension).</dd>
+</dl>
+
+<p>Instead of '<var>p</var>', '<var>d</var>' and '<var>m</var>' you can use the uppercase variants of these characters to get slashes ('<var>/</var>') instead of backslashes ('<var>\</var>') as path separators.</p>
+
+<p>The percent sign ('<var>%</var>') can be followed by an '<var>s</var>'. In this case, the placeholders will be replaced with paths matching the old 8.3 path convention.</p>
+
+<p>To get a percent sign in the resulting string you have to use the placeholder '<var>%%</var>' which will always be replaced by '<var>%</var>'.</p>
+
+
+<h3>Placeholders for referencing the project's main file</h3>
+
+<p>The following placeholders are used to reference a project's main file. If you use the '<var>Build|Current File|...</var>' commands, these placeholders will be replaced by TeXnicCenter with the equivalents for the current file.</p>
+
+<p>The examples given in brackets are showing, with what the given placeholder would be replaced by TeXnicCenter, when the current project's main file would be "C:\My Documents\TxcTest\JustATest.tex"</p>
+
+<dl>
+   <dt>%pm</dt>
+   <dd>Will be replaced by the full path of the current project's main file. ["C:\My Documents\TxcTest\JustATest.tex"]</dd>
+
+   <dt>%dm</dt>
+   <dd>Will be replaced by the directory of the current project's main file. ["C:\My Documents\TxcTest"]</dd>
+
+   <dt>%nm</dt>
+   <dd>Will be replaced by the name of the current project's main file. The name includes the file extension. ["JustATest.tex"]</dd>
+
+   <dt>%tm</dt>
+   <dd>Will be replaced by the title of the current project's main file. The title does not include the file extension. ["JustATest"]</dd>
+
+   <dt>%em</dt>
+   <dd>Will be replaced by the extension of the current project's main file. ["tex"]</dd>
+
+   <dt>%bm</dt>
+   <dd>Will be replaced by the base of the current project's main file. The base includes the directory followed by the file's title without the file extension. ["C:\My Documents\TxcTest\JustATest"]</dd>
+
+   <dt><h4>Placeholders using Slashes instead of Backslashes</h4></dt>
+
+   <dt>%Pm</dt>
+   <dd>Same as '<var>%pm</var>' but using slashes instead of backslashes. ["C:/My Documents/TxcTest/JustATest.tex"]</dd>
+
+   <dt>%Dm</dt>
+   <dd>Same as '<var>%dm</var>' but using slashes instead of backslashes. ["C:/My Documents/TxcTest"]</dd>
+
+   <dt>%Bm</dt>
+   <dd>Same as '<var>%bm</var>' but using slashes instead of backslashes. ["C:/My Documents/TxcTest/JustATest"]</dd>
+
+   <dt><h4>Placeholders for 8.3 path notation</h4></dt>
+
+   <dt>%spm</dt>
+   <dd>Same as '<var>%pm</var>' but using the 8.3 path notation. ["C:\MyDocu~1\TxcTest\JustAT~1.tex"]</dd>
+
+   <dt>%sdm</dt>
+   <dd>Same as '<var>%dm</var>' but using the 8.3 path notation. ["C:\MyDocu~1\TxcTest"]</dd>
+
+   <dt>%snm</dt>
+   <dd>Same as '<var>%nm</var>' but using the 8.3 path notation. ["JustAT~1.tex"]</dd>
+
+   <dt>%stm</dt>
+   <dd>Same as '<var>%tm</var>' but using the 8.3 path notation. ["JustAT~1"]</dd>
+
+   <dt>%sem</dt>
+   <dd>Same as '<var>%em</var>' but using the 8.3 path notation. ["tex"]</dd>
+
+   <dt>%sbm</dt>
+   <dd>Same as '<var>%sbm</var>' but using the 8.3 path notation. ["C:\MyDocu~1\TxcTest\JustAT~1"]</dd>
+
+   <dt><h4>Placeholders for 8.3 path notation using Slashes instead of Backslashes</h4></dt>
+
+   <dt>%sPm</dt>
+   <dd>Same as '<var>%spm</var>' but using slashes instead of backslashes. ["C:/MyDocu~1/TxcTest/JustAT~1.tex"]</dd>
+
+   <dt>%sDm</dt>
+   <dd>Same as '<var>%sdm</var>' but using slashes instead of backslashes. ["C:/MyDocu~1/TxcTest"]</dd>
+
+   <dt>%sBm</dt>
+   <dd>Same as '<var>%sbm</var>' but using slashes instead of backslashes. ["C:/MyDocu~1/TxcTest/JustAT~1"]</dd>
+</dl>
+
+
+
+<h3>Placeholders for referencing the current file</h3>
+
+<p>The following placeholders are used to reference the current file. The current file is the file opened in the editor, that has the input focus. If no file is open in the editor the placeholders wont be replaced.
+
+<p>The examples given in brackets are showing, with what the given placeholder would be replaced by TeXnicCenter, when the current file would be "C:\My Documents\TxcTest\JustATest.tex"</p>
+
+<dl>
+   <dt>%pc</dt>
+   <dd>Will be replaced by the full path of the current file. ["C:\My Documents\TxcTest\JustATest.tex"]</dd>
+
+   <dt>%dc</dt>
+   <dd>Will be replaced by the directory of the current file. ["C:\My Documents\TxcTest"]</dd>
+
+   <dt>%nc</dt>
+   <dd>Will be replaced by the name of the current file. The name includes the file extension. ["JustATest.tex"]</dd>
+
+   <dt>%tc</dt>
+   <dd>Will be replaced by the title of the current file. The title does not include the file extension. ["JustATest"]</dd>
+
+   <dt>%ec</dt>
+   <dd>Will be replaced by the extension of the current file. ["tex"]</dd>
+
+   <dt>%bc</dt>
+   <dd>Will be replaced by the base of the current file. The base includes the directory followed by the file's title without the file extension. ["C:\My Documents\TxcTest\JustATest"]</dd>
+
+   <dt><h4>Place Holders using Slashes instead of Backslashes</h4></dt>
+
+   <dt>%Pc</dt>
+   <dd>Same as '<var>%pm</var>' but using slashes instead of backslashes. ["C:/My Documents/TxcTest/JustATest.tex"]</dd>
+
+   <dt>%Dc</dt>
+   <dd>Same as '<var>%dm</var>' but using slashes instead of backslashes. ["C:/My Documents/TxcTest"]</dd>
+
+   <dt>%Bc</dt>
+   <dd>Same as '<var>%bm</var>' but using slashes instead of backslashes. ["C:/My Documents/TxcTest/JustATest"]</dd>
+
+   <dt><h4>Placeholders for 8.3 path notation</h4></dt>
+
+   <dt>%spc</dt>
+   <dd>Same as '<var>%pm</var>' but using the 8.3 path notation. ["C:\MyDocu~1\TxcTest\JustAT~1.tex"]</dd>
+
+   <dt>%sdc</dt>
+   <dd>Same as '<var>%dm</var>' but using the 8.3 path notation. ["C:\MyDocu~1\TxcTest"]</dd>
+
+   <dt>%snc</dt>
+   <dd>Same as '<var>%nm</var>' but using the 8.3 path notation. ["JustAT~1.tex"]</dd>
+
+   <dt>%stc</dt>
+   <dd>Same as '<var>%tm</var>' but using the 8.3 path notation. ["JustAT~1"]</dd>
+
+   <dt>%sec</dt>
+   <dd>Same as '<var>%em</var>' but using the 8.3 path notation. ["tex"]</dd>
+
+   <dt>%sbc</dt>
+   <dd>Same as '<var>%sbm</var>' but using the 8.3 path notation. ["C:\MyDocu~1\TxcTest\JustAT~1"]</dd>
+
+   <dt><h4>Placeholders for 8.3 path notation using Slashes instead of Backslashes</h4></dt>
+
+   <dt>%sPc</dt>
+   <dd>Same as '<var>%spm</var>' but using slashes instead of backslashes. ["C:/MyDocu~1/TxcTest/JustAT~1.tex"]</dd>
+
+   <dt>%sDc</dt>
+   <dd>Same as '<var>%sdm</var>' but using slashes instead of backslashes. ["C:/MyDocu~1/TxcTest"]</dd>
+
+   <dt>%sBc</dt>
+   <dd>Same as '<var>%sbm</var>' but using slashes instead of backslashes. ["C:/MyDocu~1/TxcTest/JustAT~1"]</dd>
+
+   <dt><h4>Placeholders referencing the selection in the current file</h4></dt>
+
+   <dt>%l</dt>
+   <dd>Will be replaced by the line number, the cursor is placed on in the current file.
+   <p>The first line has the number 1</p>
+   </dd>
+
+   <dt>%s</dt>
+   <dd>Will be replaced by the current selection in the current file. If nothing has been selected this placeholder will be replaced by the word the cursor is currently placed on.</dd>
+</dl>
+
+
+<h3>Other Placeholders</h3>
+
+<p>The following special placeholders are available:</p>
+
+<dl>
+   <dt>%%</dt>
+   <dd>Will be replaced by the string '<var>%</var>'.</dd>
+</dl>
+
+</body>
+</html>
